--- a/project.json
+++ b/project.json
@@ -7,6 +7,7 @@
             "install": false
         },
         "requires": [
+            "programmes-rds-loadbalancer",
             "php71u-intl",
             "php71u-mbstring",
             "php71u-mysqlnd",
